.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

3.3 - unreleased
----------------

- mark_special_links.js: Fix jQuery syntax for element wrapping. This closes
  http://dev.plone.org/plone/ticket/8200
  [dunlapm]

- form_tabbing.js: Allow for selection of a fieldset tab other than the default
  if a url hash is in the form of #fieldset-[fieldsetname]. This allows for
  graceful fallback if JavaScript is disabled.
  [dunlapm]

- Show old and new profile versions for products with profile, this closes
  http://dev.plone.org/plone/ticket/9172
  [vincentfretin]

- Removed width from eventDetails CSS class, this closes
  http://dev.plone.org/plone/ticket/8933
  [vincentfretin]

- Splitted label_event_byline into two in folder_summary_view.pt like in
  folder_listing.pt fixed in Plone 3.3rc1, this closes
  http://dev.plone.org/plone/ticket/8358
  [vincentfretin]

- Removed spurious comma from unlockOnFormUnload.js which was causing
  Javascript errors in IE.  This closes http://dev.plone.org/plone/ticket/9157
  [davisagli]

- Splitted description_no_account msgid into two, heading_new_user msgid added.
  [vincentfretin]

- Added Internet Explorer 8 support. We only load the workaround CSS file for
  IE7 and earlier now, Internet Explorer 8 parses the
  '<meta name="IE" content="EmulateIE8" />' header that forces it into standards
  mode on both intranets and public internet sites.
  [limi]

- author.cpt should honour allowAnonymousViewAbout in the same way as
  document_byline, this closes http://dev.plone.org/old/plone/ticket/8560
  [elro]

3.3rc2 - April 5, 2009
----------------------

- Added an explicit return statement in the upgrade code for products without
  a GS profile. Thx to Vincent Fretin for the code review.
  [hannosch]

- Fixing permissions typo in object_rename button, this closes