@@ -100,8 +100,7 @@
               method="post"
               tal:attributes="action template/getId"
               tal:define="findAll python:'form.button.FindAll' in request.keys();
-                          search_view here/@@pas_search;
-                          portal_users python:(searchstring or findAll) and search_view.searchUsers(**(findAll and dict(sort_by='userid') or dict(sort_by='userid', fullname=searchstring))) or [];
+                          portal_users python:context.prefsPasUsersSearch(searchstring, findAll);
                           batch python:Batch(portal_users, b_size, int(b_start), orphan=1)">
           <input type="hidden" name="form.submitted" value="1" />
 
